# CS50

./: .gitignore  CMakeLists.txt  README.md
data-structures/: CMakeLists.txt  list.c
filter/: helpers.c  helpers.h
hackerrank/: triangles.c
readability/: CMakeLists.txt  readability.c
reverse/: reverse.c
search-algos/: CMakeLists.txt  search.c
sort-algos/: CMakeLists.txt  sort.c
speller/: dictionary.c
substitution/: CMakeLists.txt  substitution.c
utils/: utils.c  utils.h
